base/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-b
  namespace: ns2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-b
  template:
    metadata:
      labels:
        app: pod-b
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
