base/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-b
  namespace: ns2
spec:
  selector:
    app: pod-b
  ports:
  - port: 80
    targetPort: 80
